1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (CPPFLAGS): Add -I$(top_srcdir)/src/misc, and
	$(top_builddir), -I$(top_builddir), and foreach expansion of
	srcdir and builddir of modules.  Don't substitute or use $(includedir).

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.h (JFINDOBJC): Formerly JFIND.
	(JFINDJAVA): New macro.

	* directory.c (compare_java_objects): Formerly compare_objects.
	(compare_objc_objects): New function.
	(java_tree): Formerly directory_tree.
	(objc_tree): New static variable.
	(java_directory_init): Initialize objc_tree.
	(java_directory_drop): Drop objc_tree.

	* directory.[hc] (java_directory_java_find): Formerly
	java_directory_find.
	(java_directory_objc_find): New function.

	* Makefile.in (libjavaswarm_la_OBJECTS): Add setup.lo.
	(CPPFLAGS): Add -I$(srcdir).

	* setup.c: New file. 
	
	* Makefile.in (CFLAGS, CC): Substitute.  
	(directory.c): Formerly directory.m.
	(%.lo): Add rule from %.c.

	* directory.[hm] (java_directory_init): Formerly initDirectoryTree.
	(java_directory_drop): Formerly removeDirectoryTree.
	(java_directory_find): Formerly _directory_findEntry.
	(java_directory_add): Formerly _directory_addNewEntry.

	* directory.m: Include objc/objc.h.
	(compare_objects): Formerly _directory_compare_jobjects.  Make static.

	* directory.h (java_directory_find, java_directory_add): Declare.
	(JFIND): Formerly DIRECTORY_ID_LOOKUP.
	(JADD): Formerly DIRECTORY_ADD_NEW_ENTRY.

	* directory.m: Rename javaobject -> java_object and objcobject to
	objc_object throughout.

	* Makefile.in (srcdir): Substitute.
	(VPATH): Set to $(srcdir).
	(libjavaswarm_la_OBJECTS): Add directory.lo.

	* directory.m: Include misc.h instead of stdlib.h.
	(_directory_addNewEntry): Use xmalloc instead of malloc.
	(compare_jobjects): 

	* directory.h: Don't declare extern _directory_tree.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
