@@ -18,3 +18,4 @@ jobject_id *java_directory_add (jobject java_object, id objc_object);
 #define JFINDJAVA(obj) ((java_directory_find_java (obj))->java_object)
 #define JADD(jobj, objc) java_directory_add (jobj, objc);
 
+SEL java_ensure_selector (JNIEnv *env, jobject jsel);
